--- a/blog/blogapp/templates/posts.html
+++ b/blog/blogapp/templates/posts.html
@@ -5,7 +5,7 @@
 <body>
 <div class="container">
     <h1>Django Blog</h1>
-    <i><h2>The best fake news.</h2></i>
+    <i><h2>The best fake blog.</h2></i>
 {% for post in posts %}
     <div class="card">
   <div class="card-body">
